// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dive Site Service when creating a new dive site will create a new dive site with minimal information 1`] = `
{
  "__v": 0,
  "_id": "00000000-0000-0000-0000-000000000000",
  "createdOn": 2024-01-08T13:33:52.364Z,
  "creator": "5A4699D8-48C4-4410-9886-B74B8B85CAC1",
  "location": "San Diego, CA",
  "name": "Test Site",
  "reviews": [],
}
`;

exports[`Dive Site Service when creating a new dive site will create a new site and save it to the database 1`] = `
{
  "__v": 0,
  "_id": "00000000-0000-0000-0000-000000000000",
  "createdOn": 2024-01-08T13:33:52.364Z,
  "creator": "5A4699D8-48C4-4410-9886-B74B8B85CAC1",
  "depth": {
    "depth": 40,
    "unit": "ft",
  },
  "description": "This is a test site.",
  "directions": "Go to San Diego and then go to the beach.",
  "freeToDive": true,
  "gps": {
    "coordinates": [
      -117.1611,
      32.7157,
    ],
    "type": "Point",
  },
  "location": "San Diego, CA",
  "name": "Test Site",
  "reviews": [],
  "shoreAccess": true,
}
`;

exports[`Dive Site Service when retrieving a dive site will return the requested dive site 1`] = `
{
  "averageDifficulty": 2.55,
  "averageRating": 4,
  "createdOn": 2023-01-06T16:56:05.573Z,
  "creator": {
    "memberSince": 2024-01-08T13:24:58.620Z,
    "userId": "5A4699D8-48C4-4410-9886-B74B8B85CAC1",
    "username": "Joe.Regular",
  },
  "depth": {
    "depth": 93.3,
    "unit": "ft",
  },
  "description": "Officiis fugiat repellendus voluptatem facere doloribus autem sapiente quas. Aperiam non distinctio rem aperiam saepe quae soluta adipisci dolores.",
  "directions": "Perspiciatis praesentium inventore deserunt sed laboriosam quas officia.",
  "freeToDive": false,
  "gps": {
    "lat": -31.96,
    "lon": -7.2,
  },
  "id": "f8b954ff-709b-43bc-aade-21a6f6906cce",
  "location": "Fargo Georgia",
  "name": "inexperienced scimitar",
  "shoreAccess": true,
  "updatedOn": 2022-02-17T12:52:47.102Z,
}
`;

exports[`Dive Site Service when searching dive sites Will sort by name in asc order 1`] = `
[
  {
    "averageDifficulty": 2.69,
    "averageRating": 3.31,
    "createdOn": 2020-07-10T02:41:28.372Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 37.3,
      "unit": "m",
    },
    "description": "Enim ratione quam quasi occaecati. Iure soluta in consequatur voluptas ab molestiae ea blanditiis aperiam.",
    "directions": "Dolores nam officia reiciendis iusto voluptatibus.",
    "freeToDive": true,
    "gps": {
      "lat": -34.84,
      "lon": 38.79,
    },
    "id": "3806eda9-5b04-48bd-9743-ea9f9e49a703",
    "location": "Youngstown Guatemala",
    "name": "academic sanction",
    "shoreAccess": true,
    "updatedOn": 2023-03-30T10:26:42.676Z,
  },
  {
    "averageDifficulty": 3.72,
    "averageRating": 3.46,
    "createdOn": 2019-09-18T13:28:58.184Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 73.2,
      "unit": "ft",
    },
    "description": "In aut vitae dolorum architecto perferendis. Cum harum excepturi.",
    "directions": "Perspiciatis maiores ad.",
    "freeToDive": false,
    "gps": {
      "lat": 85.04,
      "lon": 13.56,
    },
    "id": "b432465b-b102-45d2-88ab-9a7d7f57f82d",
    "location": "Rowlett Papua New Guinea",
    "name": "acclaimed windage",
    "shoreAccess": false,
    "updatedOn": 2020-12-16T11:12:54.892Z,
  },
  {
    "averageDifficulty": 3.57,
    "averageRating": 3.6,
    "createdOn": 2021-03-30T12:36:36.556Z,
    "creator": {
      "memberSince": 2018-10-27T16:03:42.342Z,
      "userId": "ed70c751-e659-4649-8983-2287e4199cda",
      "username": "Eryn_Bogan58",
    },
    "depth": {
      "depth": 37.56,
      "unit": "m",
    },
    "description": "Praesentium dolor inventore autem ab deleniti delectus commodi quas. Molestias perspiciatis dolore.",
    "directions": "Voluptas fugiat aut aut aliquam impedit molestiae aliquid.",
    "freeToDive": true,
    "gps": {
      "lat": 37.97,
      "lon": 125.23,
    },
    "id": "76a820c4-c8f2-4d81-afcf-235712fde93e",
    "location": "Rosemead Cuba",
    "name": "accomplished icecream",
    "shoreAccess": false,
    "updatedOn": 2021-07-17T18:12:29.122Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 2.1,
    "createdOn": 2019-03-12T18:01:54.794Z,
    "creator": {
      "memberSince": 2023-04-14T06:46:18.378Z,
      "userId": "928449ec-03af-438b-84d7-d82922a2f549",
      "username": "Jarod29",
    },
    "depth": {
      "depth": 128.7,
      "unit": "ft",
    },
    "description": "Atque quod ex corrupti voluptate porro officia adipisci dolore quia. Ullam maiores soluta corporis ex.",
    "directions": "Accusamus molestiae quaerat.",
    "freeToDive": true,
    "gps": {
      "lat": -36.36,
      "lon": 7.89,
    },
    "id": "d0496f41-ebc5-4798-8e10-7ad46d0a1b3e",
    "location": "Haverhill United Kingdom",
    "name": "adventurous honeydew",
    "shoreAccess": true,
    "updatedOn": 2021-03-22T17:42:05.678Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 3.41,
    "createdOn": 2018-07-10T09:01:53.557Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 32,
      "unit": "ft",
    },
    "description": "Delectus doloribus a rerum. At facilis tempore laudantium id consectetur.",
    "directions": "Optio tenetur illum.",
    "freeToDive": true,
    "gps": {
      "lat": 23.33,
      "lon": -30.3,
    },
    "id": "c667a962-aad5-4f34-a82a-60c1f6d25063",
    "location": "Hattiesburg Liechtenstein",
    "name": "alarming catastrophe",
    "shoreAccess": false,
    "updatedOn": 2020-08-22T08:15:41.714Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by name in desc order 1`] = `
[
  {
    "averageDifficulty": 4.85,
    "averageRating": 1.98,
    "createdOn": 2022-01-18T23:02:52.646Z,
    "creator": {
      "memberSince": 2018-05-10T12:02:56.902Z,
      "userId": "baeb11c8-e3ad-4af2-b664-85fe67a290d4",
      "username": "Camilla62",
    },
    "depth": {
      "depth": 8,
      "unit": "m",
    },
    "description": "Optio quae aliquid facere nesciunt sapiente aperiam placeat. Quibusdam consequatur aliquid.",
    "directions": "Sit dicta omnis.",
    "freeToDive": false,
    "gps": {
      "lat": 6.28,
      "lon": -6,
    },
    "id": "10c1c0a1-6f8e-44f3-862f-656b198e2b36",
    "location": "Harrisburg Grenada",
    "name": "writhing sandwich",
    "shoreAccess": false,
    "updatedOn": 2023-06-27T02:19:30.904Z,
  },
  {
    "averageDifficulty": 3.69,
    "averageRating": 2.75,
    "createdOn": 2021-02-18T22:47:47.542Z,
    "creator": {
      "memberSince": 2017-12-31T07:52:18.100Z,
      "userId": "c0f40730-124d-4f04-a33e-e37b2d43b0c0",
      "username": "Nicolette_Gleason",
    },
    "depth": {
      "depth": 78.7,
      "unit": "ft",
    },
    "description": "Tempora iusto adipisci numquam minima deleniti amet accusamus libero tenetur. Dolore fugit provident illum impedit asperiores fugiat.",
    "directions": "Voluptatem ipsam vel consequuntur eum quos id hic nesciunt.",
    "freeToDive": true,
    "gps": {
      "lat": 55.65,
      "lon": 157.13,
    },
    "id": "5f606536-da76-41fe-a74b-a4981144e12f",
    "location": "St. Joseph Hungary",
    "name": "wrathful container",
    "shoreAccess": true,
    "updatedOn": 2021-02-20T01:40:39.044Z,
  },
  {
    "averageDifficulty": 1.54,
    "averageRating": 4.68,
    "createdOn": 2022-10-30T01:31:28.825Z,
    "creator": {
      "memberSince": 2019-05-24T20:21:05.865Z,
      "userId": "47064f42-07c1-4da4-bd31-37ca70a353e7",
      "username": "Orie.Fahey",
    },
    "depth": {
      "depth": 32.97,
      "unit": "m",
    },
    "description": "Iure error enim asperiores nobis molestiae corporis aliquid veniam dolorem. Harum voluptatibus aspernatur nobis.",
    "directions": "Cupiditate minus perferendis soluta natus at dolores veniam optio.",
    "freeToDive": false,
    "gps": {
      "lat": 4.14,
      "lon": 17.35,
    },
    "id": "f3bb0ef1-bb76-468f-84c5-a4dce96dfa8a",
    "location": "Reston Morocco",
    "name": "worthless decision",
    "shoreAccess": true,
    "updatedOn": 2022-10-31T14:50:01.908Z,
  },
  {
    "averageDifficulty": 2.07,
    "averageRating": 4.88,
    "createdOn": 2020-03-31T01:03:30.190Z,
    "creator": {
      "memberSince": 2018-05-21T04:31:43.020Z,
      "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "depth": {
      "depth": 6.09,
      "unit": "m",
    },
    "description": "Totam voluptatum magnam voluptas. Commodi maxime aperiam deserunt.",
    "directions": "Harum nihil reiciendis corrupti nam vel neque.",
    "freeToDive": true,
    "gps": {
      "lat": -81.39,
      "lon": 132.33,
    },
    "id": "ccb01e30-256b-4253-80c7-4445b7424ba5",
    "location": "Centennial Guadeloupe",
    "name": "worst treasure",
    "shoreAccess": false,
    "updatedOn": 2022-01-25T05:26:50.265Z,
  },
  {
    "averageDifficulty": 2.2,
    "averageRating": 4.82,
    "createdOn": 2021-04-11T12:40:42.016Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 126.9,
      "unit": "ft",
    },
    "description": "Facere ratione suscipit reprehenderit veritatis laborum blanditiis corporis. Rem nostrum eius impedit repudiandae.",
    "directions": "Et reiciendis provident modi ut ut eaque quo.",
    "freeToDive": false,
    "gps": {
      "lat": 49.25,
      "lon": -136.76,
    },
    "id": "acc48388-1413-4610-a3a0-d36b76759ac2",
    "location": "Sterling Heights Bhutan",
    "name": "worrisome cinnamon",
    "shoreAccess": true,
    "updatedOn": 2021-03-11T21:10:37.784Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by rating in asc order 1`] = `
[
  {
    "averageDifficulty": 2.43,
    "averageRating": 1.01,
    "createdOn": 2019-06-06T11:46:01.038Z,
    "creator": {
      "memberSince": 2019-10-05T05:53:03.760Z,
      "userId": "a4f41661-a1c4-46cd-9c34-30c952ed9d32",
      "username": "Lionel_Hickle",
    },
    "depth": {
      "depth": 3.17,
      "unit": "m",
    },
    "description": "Dolorum velit consequatur et qui blanditiis ex fuga nam. Accusamus assumenda consequuntur accusantium maxime.",
    "directions": "At odio sint blanditiis assumenda.",
    "freeToDive": false,
    "gps": {
      "lat": -2.74,
      "lon": -24.88,
    },
    "id": "d9306937-4009-4a67-aded-bb734cb71235",
    "location": "Indio Japan",
    "name": "untidy authentication",
    "shoreAccess": false,
    "updatedOn": 2022-07-20T16:33:14.348Z,
  },
  {
    "averageDifficulty": 2.02,
    "averageRating": 1.05,
    "createdOn": 2019-06-27T20:52:19.877Z,
    "creator": {
      "memberSince": 2019-05-17T06:54:43.455Z,
      "userId": "aba67b0e-2063-40c8-8713-86eee84210c8",
      "username": "Jazlyn_Jakubowski13",
    },
    "depth": {
      "depth": 6.92,
      "unit": "m",
    },
    "description": "Fuga nesciunt quasi veniam repudiandae enim cupiditate nesciunt. Labore culpa officiis est natus vitae blanditiis.",
    "directions": "Facere quidem neque voluptatibus.",
    "freeToDive": true,
    "gps": {
      "lat": -14.83,
      "lon": 45.05,
    },
    "id": "bef543fc-4caf-4502-928f-e66897f5b843",
    "location": "Bethlehem Lao People's Democratic Republic",
    "name": "humiliating surname",
    "shoreAccess": false,
    "updatedOn": 2020-12-09T00:05:02.743Z,
  },
  {
    "averageDifficulty": 4.8,
    "averageRating": 1.09,
    "createdOn": 2019-03-23T07:49:17.434Z,
    "creator": {
      "memberSince": 2021-04-03T11:58:56.408Z,
      "userId": "2d152a10-1314-4494-8fa5-72d091bdb270",
      "username": "Sigmund_Muller",
    },
    "depth": {
      "depth": 81.5,
      "unit": "ft",
    },
    "description": "Eius consequatur repudiandae dolores exercitationem corporis ea velit. Eius iure voluptates tempore a.",
    "directions": "Excepturi quam a animi.",
    "freeToDive": true,
    "gps": {
      "lat": -61.15,
      "lon": -11.85,
    },
    "id": "0ea01835-3eb8-4f05-8f43-a7fbf91fe070",
    "location": "Akron Congo",
    "name": "concrete dancer",
    "shoreAccess": false,
    "updatedOn": 2023-03-21T22:21:41.436Z,
  },
  {
    "averageDifficulty": 1.25,
    "averageRating": 1.1,
    "createdOn": 2019-07-16T04:58:23.366Z,
    "creator": {
      "memberSince": 2017-09-22T05:17:43.857Z,
      "userId": "4d014c0a-9b5c-4080-be63-eade8a9260da",
      "username": "Jeanne.Wiegand11",
    },
    "depth": {
      "depth": 12.92,
      "unit": "m",
    },
    "description": "Ipsum pariatur modi sed dignissimos ut tenetur necessitatibus. Soluta tenetur asperiores maxime vel maiores vitae voluptas ab soluta.",
    "directions": "Corrupti laboriosam at illo eaque placeat explicabo.",
    "freeToDive": false,
    "gps": {
      "lat": 29.27,
      "lon": -106.34,
    },
    "id": "deaa1c8e-f067-4ada-9229-6d5fa378abd6",
    "location": "Victorville China",
    "name": "weepy brother-in-law",
    "shoreAccess": true,
    "updatedOn": 2022-02-19T08:25:23.340Z,
  },
  {
    "averageDifficulty": 1.12,
    "averageRating": 1.14,
    "createdOn": 2019-10-03T07:33:28.059Z,
    "creator": {
      "memberSince": 2017-09-20T17:24:23.460Z,
      "userId": "9487653a-40e7-446f-b45d-3fbf3bf97644",
      "username": "Preston40",
    },
    "depth": {
      "depth": 75.4,
      "unit": "ft",
    },
    "description": "Suscipit assumenda tempora possimus pariatur voluptas. Impedit aliquam nam temporibus omnis eius.",
    "directions": "Nihil laborum quae neque repudiandae.",
    "freeToDive": true,
    "gps": {
      "lat": -33.63,
      "lon": -105.4,
    },
    "id": "abef4dc8-1254-45e7-ae95-8d2978564f3d",
    "location": "Dothan Bolivia",
    "name": "failing blight",
    "shoreAccess": false,
    "updatedOn": 2023-04-28T01:48:51.271Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by rating in desc order 1`] = `
[
  {
    "averageDifficulty": 3.88,
    "averageRating": 4.96,
    "createdOn": 2021-06-13T14:23:35.687Z,
    "creator": {
      "memberSince": 2021-11-02T20:39:02.263Z,
      "userId": "11f3f8dd-5bbd-4344-8173-3a388484c4d3",
      "username": "Pietro.Tillman",
    },
    "depth": {
      "depth": 114.4,
      "unit": "ft",
    },
    "description": "Iure consequatur illum molestiae. Alias magni deserunt saepe facilis numquam reprehenderit corporis atque ipsam.",
    "directions": "Veritatis nesciunt possimus laborum quisquam officiis nostrum asperiores reiciendis.",
    "freeToDive": true,
    "gps": {
      "lat": -21.98,
      "lon": -110.74,
    },
    "id": "d9a2ee0d-1fde-411a-8808-faefdc4cb29d",
    "location": "Athens-Clarke County Liechtenstein",
    "name": "impure gavel",
    "shoreAccess": false,
    "updatedOn": 2020-11-26T14:50:50.727Z,
  },
  {
    "averageDifficulty": 3.8,
    "averageRating": 4.95,
    "createdOn": 2022-12-30T06:36:35.521Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 11.31,
      "unit": "m",
    },
    "description": "Quia accusantium asperiores. Blanditiis deserunt voluptates temporibus.",
    "directions": "Voluptas doloremque asperiores iure architecto voluptate fugit commodi.",
    "freeToDive": false,
    "gps": {
      "lat": 12.6,
      "lon": -55.31,
    },
    "id": "3d49a4f1-8918-4b89-96dc-81db0ea99ed5",
    "location": "Anaheim Guadeloupe",
    "name": "concrete thing",
    "shoreAccess": true,
    "updatedOn": 2021-12-19T06:06:01.543Z,
  },
  {
    "averageDifficulty": 4.4,
    "averageRating": 4.93,
    "createdOn": 2017-11-10T20:27:25.268Z,
    "creator": {
      "memberSince": 2018-05-21T04:31:43.020Z,
      "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "depth": {
      "depth": 60.4,
      "unit": "ft",
    },
    "description": "Beatae voluptate incidunt dolorem autem qui. Incidunt eaque aspernatur corrupti maiores ea quis dicta libero molestias.",
    "directions": "Repellendus enim ratione molestias excepturi natus enim tempora sint repellat.",
    "freeToDive": true,
    "gps": {
      "lat": -49.25,
      "lon": -135.28,
    },
    "id": "d723ed3f-edde-4dbe-b9fc-dfa846ac0cc2",
    "location": "San Jose Guernsey",
    "name": "runny patio",
    "shoreAccess": true,
    "updatedOn": 2023-01-20T08:20:22.960Z,
  },
  {
    "averageDifficulty": 1.54,
    "averageRating": 4.91,
    "createdOn": 2020-08-24T23:45:29.318Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 35.84,
      "unit": "m",
    },
    "description": "Porro voluptate exercitationem aperiam cumque eveniet iste adipisci non. Tempora ullam tempore eius nulla.",
    "directions": "Distinctio quas dolor facilis totam nam laboriosam architecto.",
    "freeToDive": true,
    "gps": {
      "lat": 21.8,
      "lon": -7.65,
    },
    "id": "4d879040-500e-4fd5-8400-e6f4c78e5b62",
    "location": "Rialto Marshall Islands",
    "name": "rundown handful",
    "shoreAccess": false,
    "updatedOn": 2021-06-13T03:32:10.180Z,
  },
  {
    "averageDifficulty": 4.35,
    "averageRating": 4.902,
    "createdOn": 2018-06-27T20:05:37.095Z,
    "creator": {
      "memberSince": 2020-09-25T22:21:02.836Z,
      "userId": "25793873-3413-4e78-aa6e-77717a7a23b8",
      "username": "Casimir_Reynolds11",
    },
    "depth": {
      "depth": 35.16,
      "unit": "m",
    },
    "description": "At perferendis repudiandae recusandae. Non totam ea molestias alias libero corporis quos repellendus culpa.",
    "directions": "Natus facilis nam iure in.",
    "freeToDive": true,
    "gps": {
      "lat": 66.65,
      "lon": 140.28,
    },
    "id": "6dbb141e-2cbd-4ac7-bdd9-ed54ff10623e",
    "location": "Cedar Park Denmark",
    "name": "each breath",
    "shoreAccess": true,
    "updatedOn": 2021-05-03T12:52:47.304Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will allow pagination of results 1`] = `
[
  {
    "averageDifficulty": 1.53,
    "averageRating": 4.24,
    "createdOn": 2019-02-19T02:08:41.305Z,
    "creator": {
      "memberSince": 2019-04-26T02:22:55.498Z,
      "userId": "fb717328-5bbc-4dab-b516-dc0ec8ab8022",
      "username": "Michale_Toy74",
    },
    "depth": {
      "depth": 94,
      "unit": "ft",
    },
    "description": "Dolorum iure pariatur animi sint. Cumque aspernatur deleniti voluptates in sunt.",
    "directions": "Facilis inventore cumque architecto repudiandae eaque enim.",
    "freeToDive": true,
    "gps": {
      "lat": 83.59,
      "lon": 20.41,
    },
    "id": "0a5e89fc-2f55-43c5-ae15-6db394788256",
    "location": "Dubuque Thailand",
    "name": "idealistic acquisition",
    "shoreAccess": false,
    "updatedOn": 2021-07-27T11:21:52.183Z,
  },
  {
    "averageDifficulty": 1.81,
    "averageRating": 4.79,
    "createdOn": 2021-06-25T10:03:41.069Z,
    "creator": {
      "memberSince": 2018-10-27T16:03:42.342Z,
      "userId": "ed70c751-e659-4649-8983-2287e4199cda",
      "username": "Eryn_Bogan58",
    },
    "depth": {
      "depth": 126.5,
      "unit": "ft",
    },
    "description": "At nulla explicabo eos. Reprehenderit aspernatur deleniti maxime.",
    "directions": "Possimus facilis quibusdam ducimus accusamus itaque fugiat.",
    "freeToDive": true,
    "gps": {
      "lat": 49.04,
      "lon": 116.31,
    },
    "id": "ac13c0ae-4d85-4a1c-9fa3-c49e0f7a8b4f",
    "location": "Rochester Ethiopia",
    "name": "identical flicker",
    "shoreAccess": false,
    "updatedOn": 2023-03-01T12:28:48.253Z,
  },
  {
    "averageDifficulty": 4.25,
    "averageRating": 3.89,
    "createdOn": 2022-01-26T05:06:09.648Z,
    "creator": {
      "memberSince": 2017-11-11T03:46:51.362Z,
      "userId": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
      "username": "Antonia.Purdy6",
    },
    "depth": {
      "depth": 3.94,
      "unit": "m",
    },
    "description": "Error soluta natus maiores consectetur quia molestias assumenda odio. Voluptate sed reiciendis odit suscipit libero ipsa.",
    "directions": "Rem repudiandae error ea aliquam voluptas velit dolorem et vero.",
    "freeToDive": true,
    "gps": {
      "lat": 26.21,
      "lon": -30.75,
    },
    "id": "d9c70155-d869-4656-8b86-e5784e7a56aa",
    "location": "Meriden San Marino",
    "name": "ignorant coyote",
    "shoreAccess": false,
    "updatedOn": 2022-06-05T20:10:03.493Z,
  },
  {
    "averageDifficulty": 1.97,
    "averageRating": 3.62,
    "createdOn": 2022-11-06T15:59:38.023Z,
    "creator": {
      "memberSince": 2021-11-02T20:39:02.263Z,
      "userId": "11f3f8dd-5bbd-4344-8173-3a388484c4d3",
      "username": "Pietro.Tillman",
    },
    "depth": {
      "depth": 95.2,
      "unit": "ft",
    },
    "description": "Aperiam tempora laboriosam numquam maiores. Distinctio porro est officiis pariatur velit id autem.",
    "directions": "Fugit unde tempora id incidunt quas molestiae.",
    "freeToDive": true,
    "gps": {
      "lat": 21.97,
      "lon": 129.98,
    },
    "id": "e569a995-71a5-4373-acb6-02bc9f472dc1",
    "location": "DeKalb Equatorial Guinea",
    "name": "illustrious anguish",
    "shoreAccess": false,
    "updatedOn": 2023-05-17T11:44:11.257Z,
  },
  {
    "averageDifficulty": 4.02,
    "averageRating": 3,
    "createdOn": 2022-12-26T02:22:15.699Z,
    "creator": {
      "memberSince": 2021-02-22T00:51:19.719Z,
      "userId": "981cfa77-2832-43a8-b472-ce01badc71f5",
      "username": "Xavier.Kunde69",
    },
    "depth": {
      "depth": 14.85,
      "unit": "m",
    },
    "description": "Placeat occaecati quod eligendi dolorem nemo quisquam sapiente optio. Voluptatum nobis earum porro eum.",
    "directions": "Velit quos maxime asperiores cum ipsam.",
    "freeToDive": false,
    "gps": {
      "lat": 45.14,
      "lon": 16.39,
    },
    "id": "6d271f47-a75c-4292-bb20-82d2c7846133",
    "location": "Livonia Armenia",
    "name": "illustrious recording",
    "shoreAccess": true,
    "updatedOn": 2023-01-14T20:28:36.205Z,
  },
  {
    "averageDifficulty": 4.21,
    "averageRating": 3.8,
    "createdOn": 2021-06-01T09:21:13.920Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 14.82,
      "unit": "m",
    },
    "description": "Temporibus dicta id eos quisquam quam sed voluptatem ratione similique. Est at at ipsa odio possimus voluptatum ducimus animi.",
    "directions": "Harum eaque sequi deserunt.",
    "freeToDive": false,
    "gps": {
      "lat": -25.3,
      "lon": 150.32,
    },
    "id": "564e5a7b-2921-48b4-9c76-34feb56ebf8e",
    "location": "Lewisville Paraguay",
    "name": "impassioned light",
    "shoreAccess": false,
    "updatedOn": 2022-06-04T17:25:58.679Z,
  },
  {
    "averageDifficulty": 1.78,
    "averageRating": 2.81,
    "createdOn": 2020-03-02T22:41:07.877Z,
    "creator": {
      "memberSince": 2021-11-02T20:39:02.263Z,
      "userId": "11f3f8dd-5bbd-4344-8173-3a388484c4d3",
      "username": "Pietro.Tillman",
    },
    "depth": {
      "depth": 58.8,
      "unit": "ft",
    },
    "description": "Fugiat deleniti fugit voluptate illum aspernatur nobis quis fugit. Fugiat eum quasi impedit error facere dolorum deserunt saepe soluta.",
    "directions": "Vero dolores dolores natus a dolores aliquid quidem.",
    "freeToDive": false,
    "gps": {
      "lat": 60.48,
      "lon": -152.22,
    },
    "id": "3e6293ed-8db2-4cae-8a40-4277526f2d33",
    "location": "Antelope Ukraine",
    "name": "imperturbable antler",
    "shoreAccess": false,
    "updatedOn": 2021-06-17T01:47:44.874Z,
  },
  {
    "averageDifficulty": 4.12,
    "averageRating": 1.82,
    "createdOn": 2021-01-24T00:18:25.979Z,
    "creator": {
      "memberSince": 2019-04-26T02:22:55.498Z,
      "userId": "fb717328-5bbc-4dab-b516-dc0ec8ab8022",
      "username": "Michale_Toy74",
    },
    "depth": {
      "depth": 32.7,
      "unit": "ft",
    },
    "description": "Ad unde iusto quod deserunt nemo. Occaecati commodi sit error cupiditate aspernatur doloribus.",
    "directions": "Quod est illo quaerat tempore enim voluptatum.",
    "freeToDive": true,
    "gps": {
      "lat": 10.49,
      "lon": 112.23,
    },
    "id": "e8413eba-e2ce-4447-a639-aec9f8c1bc4f",
    "location": "Caldwell Bermuda",
    "name": "impossible screening",
    "shoreAccess": false,
    "updatedOn": 2021-05-02T23:28:50.544Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by creator 1`] = `
[
  {
    "averageDifficulty": 3.78,
    "averageRating": 3.15,
    "createdOn": 2019-09-08T22:41:24.894Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 7.31,
      "unit": "m",
    },
    "description": "Quas occaecati dolor reiciendis occaecati. Aut a nihil officiis architecto distinctio mollitia.",
    "directions": "Ipsam debitis libero aspernatur quas pariatur placeat nostrum in beatae.",
    "freeToDive": true,
    "gps": {
      "lat": -36.77,
      "lon": -118.43,
    },
    "id": "f36010e1-9de6-4838-86a0-41a12555f758",
    "location": "Conway United Arab Emirates",
    "name": "whole intention",
    "shoreAccess": false,
    "updatedOn": 2023-02-13T11:54:30.108Z,
  },
  {
    "averageDifficulty": 4.67,
    "averageRating": 2.98,
    "createdOn": 2020-11-22T09:38:40.476Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 32.2,
      "unit": "ft",
    },
    "description": "Debitis quo nam tempore recusandae odit. Doloribus dolorum maxime repudiandae.",
    "directions": "Expedita omnis temporibus ratione ullam odio molestias illo.",
    "freeToDive": false,
    "gps": {
      "lat": 19.43,
      "lon": -139.06,
    },
    "id": "2d893dab-a296-4d92-ae36-6f58a0f3da39",
    "location": "Tracy Christmas Island",
    "name": "sore advocacy",
    "shoreAccess": false,
    "updatedOn": 2021-03-26T05:14:32.555Z,
  },
  {
    "averageDifficulty": 4.7,
    "averageRating": 2.95,
    "createdOn": 2022-10-14T05:48:18.334Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 10.82,
      "unit": "m",
    },
    "description": "Ut quam eligendi temporibus tempora quos. Occaecati ex quibusdam.",
    "directions": "Repellat voluptate quisquam voluptatem.",
    "freeToDive": false,
    "gps": {
      "lat": 26.26,
      "lon": 144.7,
    },
    "id": "272108a7-373c-4efd-a083-57af57813bac",
    "location": "Glendale Togo",
    "name": "rectangular sponsorship",
    "shoreAccess": false,
    "updatedOn": 2022-04-26T10:14:20.680Z,
  },
  {
    "averageDifficulty": 2.99,
    "averageRating": 2.7,
    "createdOn": 2023-02-19T15:16:29.973Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 35.42,
      "unit": "m",
    },
    "description": "Dolore assumenda qui corporis quidem atque magnam voluptate. Id fugiat sed cupiditate.",
    "directions": "Odit quaerat repudiandae fugit saepe doloremque in modi quae.",
    "freeToDive": false,
    "gps": {
      "lat": 7.71,
      "lon": -134.11,
    },
    "id": "291f8cb5-bc01-4c16-a934-6efa2247a4a8",
    "location": "Edmond Heard Island and McDonald Islands",
    "name": "mountainous doubter",
    "shoreAccess": false,
    "updatedOn": 2021-11-24T21:50:38.624Z,
  },
  {
    "averageDifficulty": 1.45,
    "averageRating": 2.62,
    "createdOn": 2020-02-09T15:10:13.546Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 16.16,
      "unit": "m",
    },
    "description": "Architecto excepturi soluta debitis corrupti quae totam dicta necessitatibus suscipit. Amet deserunt cum.",
    "directions": "Possimus perferendis vero.",
    "freeToDive": true,
    "gps": {
      "lat": -12.32,
      "lon": -20.67,
    },
    "id": "8b985941-9ae0-4714-bdc5-a37f40140069",
    "location": "Cerritos Tonga",
    "name": "glaring maize",
    "shoreAccess": true,
    "updatedOn": 2021-02-01T03:39:58.639Z,
  },
  {
    "averageDifficulty": 4.74,
    "averageRating": 1.95,
    "createdOn": 2019-04-19T22:03:04.303Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 21.37,
      "unit": "m",
    },
    "description": "Autem eum laboriosam accusamus impedit. Provident eaque sed non.",
    "directions": "Ipsa fugit qui facere.",
    "freeToDive": true,
    "gps": {
      "lat": 30.34,
      "lon": -152.41,
    },
    "id": "41b26df2-de43-4f90-8a95-d3f4d37c3e3b",
    "location": "Carolina Cambodia",
    "name": "lasting revenge",
    "shoreAccess": false,
    "updatedOn": 2022-12-28T09:56:08.297Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by difficulty 1`] = `
[
  {
    "averageDifficulty": 2.2,
    "averageRating": 4.82,
    "createdOn": 2021-04-11T12:40:42.016Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 126.9,
      "unit": "ft",
    },
    "description": "Facere ratione suscipit reprehenderit veritatis laborum blanditiis corporis. Rem nostrum eius impedit repudiandae.",
    "directions": "Et reiciendis provident modi ut ut eaque quo.",
    "freeToDive": false,
    "gps": {
      "lat": 49.25,
      "lon": -136.76,
    },
    "id": "acc48388-1413-4610-a3a0-d36b76759ac2",
    "location": "Sterling Heights Bhutan",
    "name": "worrisome cinnamon",
    "shoreAccess": true,
    "updatedOn": 2021-03-11T21:10:37.784Z,
  },
  {
    "averageDifficulty": 2.49,
    "averageRating": 4.48,
    "createdOn": 2019-04-17T18:41:01.368Z,
    "creator": {
      "memberSince": 2017-09-22T05:17:43.857Z,
      "userId": "4d014c0a-9b5c-4080-be63-eade8a9260da",
      "username": "Jeanne.Wiegand11",
    },
    "depth": {
      "depth": 119.3,
      "unit": "ft",
    },
    "description": "Autem atque iusto ducimus maiores ipsum ullam reprehenderit suscipit. Earum mollitia quia nulla neque dolor itaque ad aut.",
    "directions": "Expedita esse quisquam error dolore ratione eveniet sit quisquam tempore.",
    "freeToDive": false,
    "gps": {
      "lat": 65.84,
      "lon": -138.57,
    },
    "id": "016ec75a-0ed9-42fc-a49a-08f8472473b6",
    "location": "Oro Valley Lebanon",
    "name": "quizzical cloth",
    "shoreAccess": true,
    "updatedOn": 2022-11-13T10:07:53.313Z,
  },
  {
    "averageDifficulty": 2.6,
    "averageRating": 4.34,
    "createdOn": 2017-11-07T01:21:24.308Z,
    "creator": {
      "memberSince": 2017-11-11T03:46:51.362Z,
      "userId": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
      "username": "Antonia.Purdy6",
    },
    "depth": {
      "depth": 25.33,
      "unit": "m",
    },
    "description": "Culpa eius dolor velit est temporibus. Accusantium quasi voluptas facilis quas facere porro reiciendis.",
    "directions": "Rem illo mollitia blanditiis.",
    "freeToDive": false,
    "gps": {
      "lat": 5.48,
      "lon": 118.95,
    },
    "id": "f74e1f78-1fef-42b3-b7f0-e33affa540fa",
    "location": "Arecibo Indonesia",
    "name": "daring yak",
    "shoreAccess": false,
    "updatedOn": 2022-04-13T13:39:43.008Z,
  },
  {
    "averageDifficulty": 2.58,
    "averageRating": 4.13,
    "createdOn": 2019-10-06T13:57:10.032Z,
    "creator": {
      "memberSince": 2017-10-09T08:41:48.547Z,
      "userId": "5d648c18-1836-4294-8384-fff82b3f57fa",
      "username": "Mina65",
    },
    "depth": {
      "depth": 30.54,
      "unit": "m",
    },
    "description": "Eveniet aut sequi. Distinctio similique esse voluptate ex ipsum officia ad sapiente.",
    "directions": "Adipisci pariatur totam.",
    "freeToDive": false,
    "gps": {
      "lat": 50.21,
      "lon": -56.4,
    },
    "id": "6de33041-3414-49c5-af31-b183044250e5",
    "location": "Jurupa Valley Suriname",
    "name": "clueless impudence",
    "shoreAccess": false,
    "updatedOn": 2022-04-30T06:54:19.881Z,
  },
  {
    "averageDifficulty": 2.5,
    "averageRating": 4.12,
    "createdOn": 2019-09-14T15:25:56.337Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 7.99,
      "unit": "m",
    },
    "description": "Nulla doloremque a excepturi deleniti et blanditiis. Libero totam possimus necessitatibus dolorum cum eius asperiores.",
    "directions": "Magni vitae corporis voluptas sapiente.",
    "freeToDive": false,
    "gps": {
      "lat": -80.45,
      "lon": 119.56,
    },
    "id": "3400467d-3ba5-4417-9679-6b3616591c02",
    "location": "Arvada Chile",
    "name": "superior hemp",
    "shoreAccess": false,
    "updatedOn": 2022-12-25T04:44:43.150Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using long distance 1`] = `
[
  {
    "averageDifficulty": 2,
    "averageRating": 4.84,
    "createdOn": 2018-09-28T19:27:47.940Z,
    "creator": {
      "memberSince": 2018-04-11T07:18:30.090Z,
      "userId": "c24724ee-bccb-46a6-bb55-035d4c5d97fa",
      "username": "Garret.Nicolas20",
    },
    "depth": {
      "depth": 48.2,
      "unit": "ft",
    },
    "description": "Rem ad vero doloribus exercitationem nulla provident ducimus alias. Ipsam fuga ipsam quasi enim aspernatur.",
    "directions": "Unde enim alias nam aspernatur perferendis omnis placeat nobis placeat.",
    "freeToDive": false,
    "gps": {
      "lat": 85.12,
      "lon": 147.47,
    },
    "id": "95341a27-a210-4423-bc39-40736b2df4c8",
    "location": "Bayamon French Southern Territories",
    "name": "crafty den",
    "shoreAccess": false,
    "updatedOn": 2023-01-21T00:22:37.805Z,
  },
  {
    "averageDifficulty": 2.17,
    "averageRating": 4.14,
    "createdOn": 2022-03-31T04:18:56.031Z,
    "creator": {
      "memberSince": 2018-05-21T04:31:43.020Z,
      "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "depth": {
      "depth": 4.75,
      "unit": "m",
    },
    "description": "Minus aliquam aperiam quo eaque ducimus reiciendis dolorem. Porro distinctio optio doloribus et repellat quisquam.",
    "directions": "Delectus assumenda placeat minus optio.",
    "freeToDive": false,
    "gps": {
      "lat": 85.63,
      "lon": -166.14,
    },
    "id": "54ae23b4-ccef-46c8-8e3d-7af56974e91e",
    "location": "Madera Barbados",
    "name": "drafty firewall",
    "shoreAccess": false,
    "updatedOn": 2022-01-13T07:20:42.556Z,
  },
  {
    "averageDifficulty": 2.87,
    "averageRating": 3.76,
    "createdOn": 2021-11-25T14:48:00.030Z,
    "creator": {
      "memberSince": 2020-12-03T14:47:50.856Z,
      "userId": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "depth": {
      "depth": 39.93,
      "unit": "m",
    },
    "description": "Animi ducimus asperiores reiciendis. Totam beatae quas laboriosam voluptas perferendis corrupti adipisci quas itaque.",
    "directions": "Dolore molestiae aliquam.",
    "freeToDive": false,
    "gps": {
      "lat": 88.24,
      "lon": -178.88,
    },
    "id": "c68f5257-27a3-412a-a71d-1e669fb0cfff",
    "location": "White Plains Gabon",
    "name": "qualified beyond",
    "shoreAccess": false,
    "updatedOn": 2021-05-18T00:20:01.895Z,
  },
  {
    "averageDifficulty": 1.68,
    "averageRating": 2.35,
    "createdOn": 2019-10-23T07:23:29.970Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 22.95,
      "unit": "m",
    },
    "description": "Sequi optio sunt libero commodi itaque. Ipsa molestias eligendi.",
    "directions": "Quas fuga occaecati temporibus.",
    "freeToDive": true,
    "gps": {
      "lat": 87.1,
      "lon": -177.91,
    },
    "id": "563f5259-bead-4e84-8670-f095ab6bd282",
    "location": "Laguna Niguel Moldova",
    "name": "obese postage",
    "shoreAccess": true,
    "updatedOn": 2023-07-30T13:12:33.100Z,
  },
  {
    "averageDifficulty": 4.04,
    "averageRating": 1.61,
    "createdOn": 2018-07-14T18:11:06.192Z,
    "creator": {
      "memberSince": 2018-10-27T16:03:42.342Z,
      "userId": "ed70c751-e659-4649-8983-2287e4199cda",
      "username": "Eryn_Bogan58",
    },
    "depth": {
      "depth": 72,
      "unit": "ft",
    },
    "description": "Eaque reprehenderit dolores placeat nesciunt officiis. Voluptatibus modi mollitia eligendi.",
    "directions": "Consequatur tenetur est minima velit id velit.",
    "freeToDive": false,
    "gps": {
      "lat": 87.77,
      "lon": -115.15,
    },
    "id": "d7b71b04-7d9c-404e-8e39-8f9aede5a6bb",
    "location": "Castle Rock New Caledonia",
    "name": "competent wildebeest",
    "shoreAccess": true,
    "updatedOn": 2022-08-28T19:33:11.044Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using medium distance 1`] = `
[
  {
    "averageDifficulty": 2.87,
    "averageRating": 3.76,
    "createdOn": 2021-11-25T14:48:00.030Z,
    "creator": {
      "memberSince": 2020-12-03T14:47:50.856Z,
      "userId": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "depth": {
      "depth": 39.93,
      "unit": "m",
    },
    "description": "Animi ducimus asperiores reiciendis. Totam beatae quas laboriosam voluptas perferendis corrupti adipisci quas itaque.",
    "directions": "Dolore molestiae aliquam.",
    "freeToDive": false,
    "gps": {
      "lat": 88.24,
      "lon": -178.88,
    },
    "id": "c68f5257-27a3-412a-a71d-1e669fb0cfff",
    "location": "White Plains Gabon",
    "name": "qualified beyond",
    "shoreAccess": false,
    "updatedOn": 2021-05-18T00:20:01.895Z,
  },
  {
    "averageDifficulty": 1.68,
    "averageRating": 2.35,
    "createdOn": 2019-10-23T07:23:29.970Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 22.95,
      "unit": "m",
    },
    "description": "Sequi optio sunt libero commodi itaque. Ipsa molestias eligendi.",
    "directions": "Quas fuga occaecati temporibus.",
    "freeToDive": true,
    "gps": {
      "lat": 87.1,
      "lon": -177.91,
    },
    "id": "563f5259-bead-4e84-8670-f095ab6bd282",
    "location": "Laguna Niguel Moldova",
    "name": "obese postage",
    "shoreAccess": true,
    "updatedOn": 2023-07-30T13:12:33.100Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using short distance 1`] = `
[
  {
    "averageDifficulty": 2.87,
    "averageRating": 3.76,
    "createdOn": 2021-11-25T14:48:00.030Z,
    "creator": {
      "memberSince": 2020-12-03T14:47:50.856Z,
      "userId": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "depth": {
      "depth": 39.93,
      "unit": "m",
    },
    "description": "Animi ducimus asperiores reiciendis. Totam beatae quas laboriosam voluptas perferendis corrupti adipisci quas itaque.",
    "directions": "Dolore molestiae aliquam.",
    "freeToDive": false,
    "gps": {
      "lat": 88.24,
      "lon": -178.88,
    },
    "id": "c68f5257-27a3-412a-a71d-1e669fb0cfff",
    "location": "White Plains Gabon",
    "name": "qualified beyond",
    "shoreAccess": false,
    "updatedOn": 2021-05-18T00:20:01.895Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by rating 1`] = `
[
  {
    "averageDifficulty": 3.72,
    "averageRating": 3.46,
    "createdOn": 2019-09-18T13:28:58.184Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 73.2,
      "unit": "ft",
    },
    "description": "In aut vitae dolorum architecto perferendis. Cum harum excepturi.",
    "directions": "Perspiciatis maiores ad.",
    "freeToDive": false,
    "gps": {
      "lat": 85.04,
      "lon": 13.56,
    },
    "id": "b432465b-b102-45d2-88ab-9a7d7f57f82d",
    "location": "Rowlett Papua New Guinea",
    "name": "acclaimed windage",
    "shoreAccess": false,
    "updatedOn": 2020-12-16T11:12:54.892Z,
  },
  {
    "averageDifficulty": 1.74,
    "averageRating": 3.45,
    "createdOn": 2021-08-17T12:53:52.794Z,
    "creator": {
      "memberSince": 2019-10-05T05:53:03.760Z,
      "userId": "a4f41661-a1c4-46cd-9c34-30c952ed9d32",
      "username": "Lionel_Hickle",
    },
    "depth": {
      "depth": 25.46,
      "unit": "m",
    },
    "description": "Dolore magnam temporibus. Distinctio aliquam voluptatibus mollitia sapiente illum cupiditate.",
    "directions": "Explicabo vero adipisci natus.",
    "freeToDive": true,
    "gps": {
      "lat": -51.32,
      "lon": -72.53,
    },
    "id": "439a4b26-3b2c-4239-8692-7af157951d0e",
    "location": "Irvine Macao",
    "name": "runny mattock",
    "shoreAccess": true,
    "updatedOn": 2023-02-24T14:36:05.694Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 3.41,
    "createdOn": 2018-07-10T09:01:53.557Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 32,
      "unit": "ft",
    },
    "description": "Delectus doloribus a rerum. At facilis tempore laudantium id consectetur.",
    "directions": "Optio tenetur illum.",
    "freeToDive": true,
    "gps": {
      "lat": 23.33,
      "lon": -30.3,
    },
    "id": "c667a962-aad5-4f34-a82a-60c1f6d25063",
    "location": "Hattiesburg Liechtenstein",
    "name": "alarming catastrophe",
    "shoreAccess": false,
    "updatedOn": 2020-08-22T08:15:41.714Z,
  },
  {
    "averageDifficulty": 4.89,
    "averageRating": 3.38,
    "createdOn": 2020-04-29T15:44:58.227Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 21.09,
      "unit": "m",
    },
    "description": "Neque sequi quas aperiam est impedit expedita ducimus unde maiores. Suscipit tenetur enim molestiae excepturi.",
    "directions": "Nihil deleniti dolore ducimus voluptas accusamus.",
    "freeToDive": true,
    "gps": {
      "lat": -19.28,
      "lon": -151.77,
    },
    "id": "5cb4c351-7d29-4277-8815-eea84156a985",
    "location": "Brandon Afghanistan",
    "name": "unique fleck",
    "shoreAccess": true,
    "updatedOn": 2021-04-20T11:29:37.034Z,
  },
  {
    "averageDifficulty": 1.2,
    "averageRating": 3.36,
    "createdOn": 2019-11-11T04:47:58.204Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 31.5,
      "unit": "ft",
    },
    "description": "Harum minima alias nostrum in aut quos possimus. Iure animi vel asperiores delectus laboriosam facilis.",
    "directions": "Labore veritatis facilis.",
    "freeToDive": true,
    "gps": {
      "lat": 54.67,
      "lon": 90.13,
    },
    "id": "b5ddaa6d-9ed4-428d-9592-f6a21088e85c",
    "location": "Jupiter Iran",
    "name": "qualified somebody",
    "shoreAccess": false,
    "updatedOn": 2020-09-17T01:01:09.609Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results when freeToDive is false 1`] = `
[
  {
    "averageDifficulty": 3.72,
    "averageRating": 3.46,
    "createdOn": 2019-09-18T13:28:58.184Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 73.2,
      "unit": "ft",
    },
    "description": "In aut vitae dolorum architecto perferendis. Cum harum excepturi.",
    "directions": "Perspiciatis maiores ad.",
    "freeToDive": false,
    "gps": {
      "lat": 85.04,
      "lon": 13.56,
    },
    "id": "b432465b-b102-45d2-88ab-9a7d7f57f82d",
    "location": "Rowlett Papua New Guinea",
    "name": "acclaimed windage",
    "shoreAccess": false,
    "updatedOn": 2020-12-16T11:12:54.892Z,
  },
  {
    "averageDifficulty": 2.89,
    "averageRating": 2.5,
    "createdOn": 2023-01-03T07:52:08.094Z,
    "creator": {
      "memberSince": 2019-01-04T21:57:53.487Z,
      "userId": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "depth": {
      "depth": 24.77,
      "unit": "m",
    },
    "description": "In repudiandae itaque numquam assumenda ex. Veniam ipsa voluptates exercitationem quaerat ex quia numquam non et.",
    "directions": "Aut ipsum provident itaque.",
    "freeToDive": false,
    "gps": {
      "lat": 61.22,
      "lon": -40.01,
    },
    "id": "71923f7d-cab1-4f88-9564-23f91042f450",
    "location": "San Marcos Myanmar",
    "name": "average lesbian",
    "shoreAccess": false,
    "updatedOn": 2021-06-01T09:55:22.259Z,
  },
  {
    "averageDifficulty": 3.08,
    "averageRating": 1.97,
    "createdOn": 2021-08-05T08:30:45.604Z,
    "creator": {
      "memberSince": 2022-11-14T23:00:20.603Z,
      "userId": "fd2d03a2-e477-43df-8d65-72966d3b1a8f",
      "username": "Cordia.Lebsack1",
    },
    "depth": {
      "depth": 12.3,
      "unit": "ft",
    },
    "description": "Enim ab maxime rem ducimus dicta totam tenetur fugiat. Dolor deleniti hic vel quas corporis incidunt dicta incidunt porro.",
    "directions": "Recusandae odit magni sed dolores repellendus eveniet eveniet quas.",
    "freeToDive": false,
    "gps": {
      "lat": -88.93,
      "lon": 141.38,
    },
    "id": "475bc208-2ac3-414b-870c-4833670e5f82",
    "location": "Arecibo Argentina",
    "name": "awkward hybridisation",
    "shoreAccess": true,
    "updatedOn": 2021-08-31T14:38:48.926Z,
  },
  {
    "averageDifficulty": 1.86,
    "averageRating": 1.68,
    "createdOn": 2022-10-21T23:04:11.126Z,
    "creator": {
      "memberSince": 2020-12-03T14:47:50.856Z,
      "userId": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "depth": {
      "depth": 36.46,
      "unit": "m",
    },
    "description": "Quae sequi excepturi necessitatibus optio ad fuga odit vel tempora. Excepturi neque possimus suscipit culpa voluptas.",
    "directions": "Atque ad tenetur non.",
    "freeToDive": false,
    "gps": {
      "lat": 68.61,
      "lon": 132.15,
    },
    "id": "9da21bb0-761e-469e-9aff-57771b386622",
    "location": "Denver Sao Tome and Principe",
    "name": "bad proof",
    "shoreAccess": true,
    "updatedOn": 2020-10-01T05:22:55.851Z,
  },
  {
    "averageDifficulty": 4.23,
    "averageRating": 3.1,
    "createdOn": 2021-02-05T06:37:03.106Z,
    "creator": {
      "memberSince": 2017-11-11T03:46:51.362Z,
      "userId": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
      "username": "Antonia.Purdy6",
    },
    "depth": {
      "depth": 9.41,
      "unit": "m",
    },
    "description": "Dolor optio provident in iusto facere aut ducimus. Assumenda recusandae vero aperiam quisquam.",
    "directions": "Repellendus nam consequatur voluptas.",
    "freeToDive": false,
    "gps": {
      "lat": 67.33,
      "lon": -6.53,
    },
    "id": "e14233c2-1dac-4ae3-88dd-0855f2275cd2",
    "location": "Fort Wayne Dominican Republic",
    "name": "better kimono",
    "shoreAccess": true,
    "updatedOn": 2022-02-19T17:55:22.705Z,
  },
  {
    "averageDifficulty": 1.04,
    "averageRating": 4.52,
    "createdOn": 2021-10-25T01:03:55.121Z,
    "creator": {
      "memberSince": 2019-01-04T21:57:53.487Z,
      "userId": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "depth": {
      "depth": 27.98,
      "unit": "m",
    },
    "description": "Quibusdam corporis qui. Reiciendis sed eos quas soluta.",
    "directions": "Harum quaerat repellendus.",
    "freeToDive": false,
    "gps": {
      "lat": -16.32,
      "lon": 81.91,
    },
    "id": "7e112365-629c-4981-9844-6905bc26c7ed",
    "location": "Catalina Foothills French Polynesia",
    "name": "better tangerine",
    "shoreAccess": false,
    "updatedOn": 2021-06-17T22:02:18.282Z,
  },
  {
    "averageDifficulty": 4.02,
    "averageRating": 3.88,
    "createdOn": 2018-03-22T22:55:00.490Z,
    "creator": {
      "memberSince": 2019-05-17T06:54:43.455Z,
      "userId": "aba67b0e-2063-40c8-8713-86eee84210c8",
      "username": "Jazlyn_Jakubowski13",
    },
    "depth": {
      "depth": 11.85,
      "unit": "m",
    },
    "description": "Aliquid sit quae at. Optio modi sapiente voluptas facere tenetur fuga sunt dolores.",
    "directions": "Ratione nesciunt cupiditate tenetur iure a natus quae.",
    "freeToDive": false,
    "gps": {
      "lat": -32.38,
      "lon": 157.54,
    },
    "id": "42617b3b-be37-4c98-96b5-717ac3cb057e",
    "location": "Huntsville Saint Pierre and Miquelon",
    "name": "biodegradable sculptural",
    "shoreAccess": false,
    "updatedOn": 2022-01-14T17:38:50.682Z,
  },
  {
    "averageDifficulty": 2.44,
    "averageRating": 2.32,
    "createdOn": 2021-05-24T22:27:38.772Z,
    "creator": {
      "memberSince": 2020-12-03T14:47:50.856Z,
      "userId": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "depth": {
      "depth": 26,
      "unit": "m",
    },
    "description": "Dignissimos tempore corrupti harum cumque architecto in eos quas. Illum maiores sint corrupti quis fuga ipsam fugiat atque incidunt.",
    "directions": "Veritatis id suscipit nam dolore ipsum doloribus assumenda amet consequatur.",
    "freeToDive": false,
    "gps": {
      "lat": 65.12,
      "lon": -127.91,
    },
    "id": "cd45921e-422f-433a-8e4b-8b121aab02c6",
    "location": "Spring Ethiopia",
    "name": "bleak ikebana",
    "shoreAccess": false,
    "updatedOn": 2022-11-13T13:44:10.330Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results when freeToDive is true 1`] = `
[
  {
    "averageDifficulty": 2.69,
    "averageRating": 3.31,
    "createdOn": 2020-07-10T02:41:28.372Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 37.3,
      "unit": "m",
    },
    "description": "Enim ratione quam quasi occaecati. Iure soluta in consequatur voluptas ab molestiae ea blanditiis aperiam.",
    "directions": "Dolores nam officia reiciendis iusto voluptatibus.",
    "freeToDive": true,
    "gps": {
      "lat": -34.84,
      "lon": 38.79,
    },
    "id": "3806eda9-5b04-48bd-9743-ea9f9e49a703",
    "location": "Youngstown Guatemala",
    "name": "academic sanction",
    "shoreAccess": true,
    "updatedOn": 2023-03-30T10:26:42.676Z,
  },
  {
    "averageDifficulty": 3.57,
    "averageRating": 3.6,
    "createdOn": 2021-03-30T12:36:36.556Z,
    "creator": {
      "memberSince": 2018-10-27T16:03:42.342Z,
      "userId": "ed70c751-e659-4649-8983-2287e4199cda",
      "username": "Eryn_Bogan58",
    },
    "depth": {
      "depth": 37.56,
      "unit": "m",
    },
    "description": "Praesentium dolor inventore autem ab deleniti delectus commodi quas. Molestias perspiciatis dolore.",
    "directions": "Voluptas fugiat aut aut aliquam impedit molestiae aliquid.",
    "freeToDive": true,
    "gps": {
      "lat": 37.97,
      "lon": 125.23,
    },
    "id": "76a820c4-c8f2-4d81-afcf-235712fde93e",
    "location": "Rosemead Cuba",
    "name": "accomplished icecream",
    "shoreAccess": false,
    "updatedOn": 2021-07-17T18:12:29.122Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 2.1,
    "createdOn": 2019-03-12T18:01:54.794Z,
    "creator": {
      "memberSince": 2023-04-14T06:46:18.378Z,
      "userId": "928449ec-03af-438b-84d7-d82922a2f549",
      "username": "Jarod29",
    },
    "depth": {
      "depth": 128.7,
      "unit": "ft",
    },
    "description": "Atque quod ex corrupti voluptate porro officia adipisci dolore quia. Ullam maiores soluta corporis ex.",
    "directions": "Accusamus molestiae quaerat.",
    "freeToDive": true,
    "gps": {
      "lat": -36.36,
      "lon": 7.89,
    },
    "id": "d0496f41-ebc5-4798-8e10-7ad46d0a1b3e",
    "location": "Haverhill United Kingdom",
    "name": "adventurous honeydew",
    "shoreAccess": true,
    "updatedOn": 2021-03-22T17:42:05.678Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 3.41,
    "createdOn": 2018-07-10T09:01:53.557Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 32,
      "unit": "ft",
    },
    "description": "Delectus doloribus a rerum. At facilis tempore laudantium id consectetur.",
    "directions": "Optio tenetur illum.",
    "freeToDive": true,
    "gps": {
      "lat": 23.33,
      "lon": -30.3,
    },
    "id": "c667a962-aad5-4f34-a82a-60c1f6d25063",
    "location": "Hattiesburg Liechtenstein",
    "name": "alarming catastrophe",
    "shoreAccess": false,
    "updatedOn": 2020-08-22T08:15:41.714Z,
  },
  {
    "averageDifficulty": 1.78,
    "averageRating": 4.43,
    "createdOn": 2019-09-05T18:42:22.648Z,
    "creator": {
      "memberSince": 2018-05-09T08:21:54.925Z,
      "userId": "3c930653-0c3d-49d5-ab62-45c4a6832d6b",
      "username": "Ryan68",
    },
    "depth": {
      "depth": 26.28,
      "unit": "m",
    },
    "description": "Eos eaque vero repudiandae ipsum. Veniam placeat sapiente nobis facilis quod repudiandae facilis doloribus modi.",
    "directions": "Velit excepturi eum ad magnam sed unde voluptatum pariatur cum.",
    "freeToDive": true,
    "gps": {
      "lat": 84.02,
      "lon": 37.1,
    },
    "id": "16f28566-fc10-43e6-ae63-7199ec2dacd8",
    "location": "Temecula Eritrea",
    "name": "alert illustration",
    "shoreAccess": true,
    "updatedOn": 2020-11-30T05:12:28.855Z,
  },
  {
    "averageDifficulty": 1.43,
    "averageRating": 2.61,
    "createdOn": 2022-06-08T01:30:46.666Z,
    "creator": {
      "memberSince": 2017-10-09T08:41:48.547Z,
      "userId": "5d648c18-1836-4294-8384-fff82b3f57fa",
      "username": "Mina65",
    },
    "depth": {
      "depth": 32.9,
      "unit": "ft",
    },
    "description": "At error sequi quos omnis ratione voluptates at. Dolor repudiandae facere illum ipsa explicabo eum eius sunt.",
    "directions": "Error ut cupiditate ad ipsum sit.",
    "freeToDive": true,
    "gps": {
      "lat": -5.31,
      "lon": 36.92,
    },
    "id": "b7285b7d-3bac-4281-9a0b-d2a610149256",
    "location": "State College Taiwan",
    "name": "ashamed statin",
    "shoreAccess": false,
    "updatedOn": 2023-04-13T14:40:25.445Z,
  },
  {
    "averageDifficulty": 3.08,
    "averageRating": 2.09,
    "createdOn": 2023-03-06T19:37:13.765Z,
    "creator": {
      "memberSince": 2019-01-04T21:57:53.487Z,
      "userId": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "depth": {
      "depth": 23.09,
      "unit": "m",
    },
    "description": "Porro rem consectetur ipsa doloribus excepturi aperiam. Ducimus quas accusantium minus iure eum.",
    "directions": "Facere reiciendis porro eius doloremque vel quia repellendus.",
    "freeToDive": true,
    "gps": {
      "lat": -68.46,
      "lon": -35.98,
    },
    "id": "34f470da-60a5-4f02-86f9-a5a5744def8d",
    "location": "Toledo Panama",
    "name": "bad particular",
    "shoreAccess": true,
    "updatedOn": 2023-04-19T22:14:44.810Z,
  },
  {
    "averageDifficulty": 4.14,
    "averageRating": 3.97,
    "createdOn": 2021-08-09T03:56:11.559Z,
    "creator": {
      "memberSince": 2021-02-22T00:51:19.719Z,
      "userId": "981cfa77-2832-43a8-b472-ce01badc71f5",
      "username": "Xavier.Kunde69",
    },
    "depth": {
      "depth": 9.51,
      "unit": "m",
    },
    "description": "Iusto in inventore. Harum vitae rem blanditiis ullam veritatis delectus.",
    "directions": "Enim dolorem veritatis enim nam aspernatur.",
    "freeToDive": true,
    "gps": {
      "lat": 24.13,
      "lon": 49.85,
    },
    "id": "de2e69af-1d39-4328-b444-38344cb729f8",
    "location": "West Sacramento Portugal",
    "name": "biodegradable chassis",
    "shoreAccess": true,
    "updatedOn": 2022-12-22T20:56:01.250Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results when shoreAccess is false 1`] = `
[
  {
    "averageDifficulty": 3.72,
    "averageRating": 3.46,
    "createdOn": 2019-09-18T13:28:58.184Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 73.2,
      "unit": "ft",
    },
    "description": "In aut vitae dolorum architecto perferendis. Cum harum excepturi.",
    "directions": "Perspiciatis maiores ad.",
    "freeToDive": false,
    "gps": {
      "lat": 85.04,
      "lon": 13.56,
    },
    "id": "b432465b-b102-45d2-88ab-9a7d7f57f82d",
    "location": "Rowlett Papua New Guinea",
    "name": "acclaimed windage",
    "shoreAccess": false,
    "updatedOn": 2020-12-16T11:12:54.892Z,
  },
  {
    "averageDifficulty": 3.57,
    "averageRating": 3.6,
    "createdOn": 2021-03-30T12:36:36.556Z,
    "creator": {
      "memberSince": 2018-10-27T16:03:42.342Z,
      "userId": "ed70c751-e659-4649-8983-2287e4199cda",
      "username": "Eryn_Bogan58",
    },
    "depth": {
      "depth": 37.56,
      "unit": "m",
    },
    "description": "Praesentium dolor inventore autem ab deleniti delectus commodi quas. Molestias perspiciatis dolore.",
    "directions": "Voluptas fugiat aut aut aliquam impedit molestiae aliquid.",
    "freeToDive": true,
    "gps": {
      "lat": 37.97,
      "lon": 125.23,
    },
    "id": "76a820c4-c8f2-4d81-afcf-235712fde93e",
    "location": "Rosemead Cuba",
    "name": "accomplished icecream",
    "shoreAccess": false,
    "updatedOn": 2021-07-17T18:12:29.122Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 3.41,
    "createdOn": 2018-07-10T09:01:53.557Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 32,
      "unit": "ft",
    },
    "description": "Delectus doloribus a rerum. At facilis tempore laudantium id consectetur.",
    "directions": "Optio tenetur illum.",
    "freeToDive": true,
    "gps": {
      "lat": 23.33,
      "lon": -30.3,
    },
    "id": "c667a962-aad5-4f34-a82a-60c1f6d25063",
    "location": "Hattiesburg Liechtenstein",
    "name": "alarming catastrophe",
    "shoreAccess": false,
    "updatedOn": 2020-08-22T08:15:41.714Z,
  },
  {
    "averageDifficulty": 1.43,
    "averageRating": 2.61,
    "createdOn": 2022-06-08T01:30:46.666Z,
    "creator": {
      "memberSince": 2017-10-09T08:41:48.547Z,
      "userId": "5d648c18-1836-4294-8384-fff82b3f57fa",
      "username": "Mina65",
    },
    "depth": {
      "depth": 32.9,
      "unit": "ft",
    },
    "description": "At error sequi quos omnis ratione voluptates at. Dolor repudiandae facere illum ipsa explicabo eum eius sunt.",
    "directions": "Error ut cupiditate ad ipsum sit.",
    "freeToDive": true,
    "gps": {
      "lat": -5.31,
      "lon": 36.92,
    },
    "id": "b7285b7d-3bac-4281-9a0b-d2a610149256",
    "location": "State College Taiwan",
    "name": "ashamed statin",
    "shoreAccess": false,
    "updatedOn": 2023-04-13T14:40:25.445Z,
  },
  {
    "averageDifficulty": 2.89,
    "averageRating": 2.5,
    "createdOn": 2023-01-03T07:52:08.094Z,
    "creator": {
      "memberSince": 2019-01-04T21:57:53.487Z,
      "userId": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "depth": {
      "depth": 24.77,
      "unit": "m",
    },
    "description": "In repudiandae itaque numquam assumenda ex. Veniam ipsa voluptates exercitationem quaerat ex quia numquam non et.",
    "directions": "Aut ipsum provident itaque.",
    "freeToDive": false,
    "gps": {
      "lat": 61.22,
      "lon": -40.01,
    },
    "id": "71923f7d-cab1-4f88-9564-23f91042f450",
    "location": "San Marcos Myanmar",
    "name": "average lesbian",
    "shoreAccess": false,
    "updatedOn": 2021-06-01T09:55:22.259Z,
  },
  {
    "averageDifficulty": 1.04,
    "averageRating": 4.52,
    "createdOn": 2021-10-25T01:03:55.121Z,
    "creator": {
      "memberSince": 2019-01-04T21:57:53.487Z,
      "userId": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "depth": {
      "depth": 27.98,
      "unit": "m",
    },
    "description": "Quibusdam corporis qui. Reiciendis sed eos quas soluta.",
    "directions": "Harum quaerat repellendus.",
    "freeToDive": false,
    "gps": {
      "lat": -16.32,
      "lon": 81.91,
    },
    "id": "7e112365-629c-4981-9844-6905bc26c7ed",
    "location": "Catalina Foothills French Polynesia",
    "name": "better tangerine",
    "shoreAccess": false,
    "updatedOn": 2021-06-17T22:02:18.282Z,
  },
  {
    "averageDifficulty": 4.02,
    "averageRating": 3.88,
    "createdOn": 2018-03-22T22:55:00.490Z,
    "creator": {
      "memberSince": 2019-05-17T06:54:43.455Z,
      "userId": "aba67b0e-2063-40c8-8713-86eee84210c8",
      "username": "Jazlyn_Jakubowski13",
    },
    "depth": {
      "depth": 11.85,
      "unit": "m",
    },
    "description": "Aliquid sit quae at. Optio modi sapiente voluptas facere tenetur fuga sunt dolores.",
    "directions": "Ratione nesciunt cupiditate tenetur iure a natus quae.",
    "freeToDive": false,
    "gps": {
      "lat": -32.38,
      "lon": 157.54,
    },
    "id": "42617b3b-be37-4c98-96b5-717ac3cb057e",
    "location": "Huntsville Saint Pierre and Miquelon",
    "name": "biodegradable sculptural",
    "shoreAccess": false,
    "updatedOn": 2022-01-14T17:38:50.682Z,
  },
  {
    "averageDifficulty": 2.44,
    "averageRating": 2.32,
    "createdOn": 2021-05-24T22:27:38.772Z,
    "creator": {
      "memberSince": 2020-12-03T14:47:50.856Z,
      "userId": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "depth": {
      "depth": 26,
      "unit": "m",
    },
    "description": "Dignissimos tempore corrupti harum cumque architecto in eos quas. Illum maiores sint corrupti quis fuga ipsam fugiat atque incidunt.",
    "directions": "Veritatis id suscipit nam dolore ipsum doloribus assumenda amet consequatur.",
    "freeToDive": false,
    "gps": {
      "lat": 65.12,
      "lon": -127.91,
    },
    "id": "cd45921e-422f-433a-8e4b-8b121aab02c6",
    "location": "Spring Ethiopia",
    "name": "bleak ikebana",
    "shoreAccess": false,
    "updatedOn": 2022-11-13T13:44:10.330Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results when shoreAccess is true 1`] = `
[
  {
    "averageDifficulty": 2.69,
    "averageRating": 3.31,
    "createdOn": 2020-07-10T02:41:28.372Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 37.3,
      "unit": "m",
    },
    "description": "Enim ratione quam quasi occaecati. Iure soluta in consequatur voluptas ab molestiae ea blanditiis aperiam.",
    "directions": "Dolores nam officia reiciendis iusto voluptatibus.",
    "freeToDive": true,
    "gps": {
      "lat": -34.84,
      "lon": 38.79,
    },
    "id": "3806eda9-5b04-48bd-9743-ea9f9e49a703",
    "location": "Youngstown Guatemala",
    "name": "academic sanction",
    "shoreAccess": true,
    "updatedOn": 2023-03-30T10:26:42.676Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 2.1,
    "createdOn": 2019-03-12T18:01:54.794Z,
    "creator": {
      "memberSince": 2023-04-14T06:46:18.378Z,
      "userId": "928449ec-03af-438b-84d7-d82922a2f549",
      "username": "Jarod29",
    },
    "depth": {
      "depth": 128.7,
      "unit": "ft",
    },
    "description": "Atque quod ex corrupti voluptate porro officia adipisci dolore quia. Ullam maiores soluta corporis ex.",
    "directions": "Accusamus molestiae quaerat.",
    "freeToDive": true,
    "gps": {
      "lat": -36.36,
      "lon": 7.89,
    },
    "id": "d0496f41-ebc5-4798-8e10-7ad46d0a1b3e",
    "location": "Haverhill United Kingdom",
    "name": "adventurous honeydew",
    "shoreAccess": true,
    "updatedOn": 2021-03-22T17:42:05.678Z,
  },
  {
    "averageDifficulty": 1.78,
    "averageRating": 4.43,
    "createdOn": 2019-09-05T18:42:22.648Z,
    "creator": {
      "memberSince": 2018-05-09T08:21:54.925Z,
      "userId": "3c930653-0c3d-49d5-ab62-45c4a6832d6b",
      "username": "Ryan68",
    },
    "depth": {
      "depth": 26.28,
      "unit": "m",
    },
    "description": "Eos eaque vero repudiandae ipsum. Veniam placeat sapiente nobis facilis quod repudiandae facilis doloribus modi.",
    "directions": "Velit excepturi eum ad magnam sed unde voluptatum pariatur cum.",
    "freeToDive": true,
    "gps": {
      "lat": 84.02,
      "lon": 37.1,
    },
    "id": "16f28566-fc10-43e6-ae63-7199ec2dacd8",
    "location": "Temecula Eritrea",
    "name": "alert illustration",
    "shoreAccess": true,
    "updatedOn": 2020-11-30T05:12:28.855Z,
  },
  {
    "averageDifficulty": 3.08,
    "averageRating": 1.97,
    "createdOn": 2021-08-05T08:30:45.604Z,
    "creator": {
      "memberSince": 2022-11-14T23:00:20.603Z,
      "userId": "fd2d03a2-e477-43df-8d65-72966d3b1a8f",
      "username": "Cordia.Lebsack1",
    },
    "depth": {
      "depth": 12.3,
      "unit": "ft",
    },
    "description": "Enim ab maxime rem ducimus dicta totam tenetur fugiat. Dolor deleniti hic vel quas corporis incidunt dicta incidunt porro.",
    "directions": "Recusandae odit magni sed dolores repellendus eveniet eveniet quas.",
    "freeToDive": false,
    "gps": {
      "lat": -88.93,
      "lon": 141.38,
    },
    "id": "475bc208-2ac3-414b-870c-4833670e5f82",
    "location": "Arecibo Argentina",
    "name": "awkward hybridisation",
    "shoreAccess": true,
    "updatedOn": 2021-08-31T14:38:48.926Z,
  },
  {
    "averageDifficulty": 3.08,
    "averageRating": 2.09,
    "createdOn": 2023-03-06T19:37:13.765Z,
    "creator": {
      "memberSince": 2019-01-04T21:57:53.487Z,
      "userId": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "username": "Lucious.Pagac",
    },
    "depth": {
      "depth": 23.09,
      "unit": "m",
    },
    "description": "Porro rem consectetur ipsa doloribus excepturi aperiam. Ducimus quas accusantium minus iure eum.",
    "directions": "Facere reiciendis porro eius doloremque vel quia repellendus.",
    "freeToDive": true,
    "gps": {
      "lat": -68.46,
      "lon": -35.98,
    },
    "id": "34f470da-60a5-4f02-86f9-a5a5744def8d",
    "location": "Toledo Panama",
    "name": "bad particular",
    "shoreAccess": true,
    "updatedOn": 2023-04-19T22:14:44.810Z,
  },
  {
    "averageDifficulty": 1.86,
    "averageRating": 1.68,
    "createdOn": 2022-10-21T23:04:11.126Z,
    "creator": {
      "memberSince": 2020-12-03T14:47:50.856Z,
      "userId": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "depth": {
      "depth": 36.46,
      "unit": "m",
    },
    "description": "Quae sequi excepturi necessitatibus optio ad fuga odit vel tempora. Excepturi neque possimus suscipit culpa voluptas.",
    "directions": "Atque ad tenetur non.",
    "freeToDive": false,
    "gps": {
      "lat": 68.61,
      "lon": 132.15,
    },
    "id": "9da21bb0-761e-469e-9aff-57771b386622",
    "location": "Denver Sao Tome and Principe",
    "name": "bad proof",
    "shoreAccess": true,
    "updatedOn": 2020-10-01T05:22:55.851Z,
  },
  {
    "averageDifficulty": 4.23,
    "averageRating": 3.1,
    "createdOn": 2021-02-05T06:37:03.106Z,
    "creator": {
      "memberSince": 2017-11-11T03:46:51.362Z,
      "userId": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
      "username": "Antonia.Purdy6",
    },
    "depth": {
      "depth": 9.41,
      "unit": "m",
    },
    "description": "Dolor optio provident in iusto facere aut ducimus. Assumenda recusandae vero aperiam quisquam.",
    "directions": "Repellendus nam consequatur voluptas.",
    "freeToDive": false,
    "gps": {
      "lat": 67.33,
      "lon": -6.53,
    },
    "id": "e14233c2-1dac-4ae3-88dd-0855f2275cd2",
    "location": "Fort Wayne Dominican Republic",
    "name": "better kimono",
    "shoreAccess": true,
    "updatedOn": 2022-02-19T17:55:22.705Z,
  },
  {
    "averageDifficulty": 4.14,
    "averageRating": 3.97,
    "createdOn": 2021-08-09T03:56:11.559Z,
    "creator": {
      "memberSince": 2021-02-22T00:51:19.719Z,
      "userId": "981cfa77-2832-43a8-b472-ce01badc71f5",
      "username": "Xavier.Kunde69",
    },
    "depth": {
      "depth": 9.51,
      "unit": "m",
    },
    "description": "Iusto in inventore. Harum vitae rem blanditiis ullam veritatis delectus.",
    "directions": "Enim dolorem veritatis enim nam aspernatur.",
    "freeToDive": true,
    "gps": {
      "lat": 24.13,
      "lon": 49.85,
    },
    "id": "de2e69af-1d39-4328-b444-38344cb729f8",
    "location": "West Sacramento Portugal",
    "name": "biodegradable chassis",
    "shoreAccess": true,
    "updatedOn": 2022-12-22T20:56:01.250Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will perform text-based searches 1`] = `
[
  {
    "averageDifficulty": 3.43,
    "averageRating": 4.52,
    "createdOn": 2019-03-19T01:14:04.542Z,
    "creator": {
      "memberSince": 2019-04-26T02:22:55.498Z,
      "userId": "fb717328-5bbc-4dab-b516-dc0ec8ab8022",
      "username": "Michale_Toy74",
    },
    "depth": {
      "depth": 29.2,
      "unit": "m",
    },
    "description": "Incidunt cum repellat illo molestiae voluptate aspernatur labore. Cum velit natus minus assumenda fugit debitis eos nam at.",
    "directions": "Delectus deleniti ducimus earum vel numquam reprehenderit modi.",
    "freeToDive": true,
    "gps": {
      "lat": -33.07,
      "lon": -85.12,
    },
    "id": "bbd21b2b-85d2-47fe-b4a2-dfd980172ed8",
    "location": "North Lauderdale Luxembourg",
    "name": "ethical savings",
    "shoreAccess": false,
    "updatedOn": 2023-02-02T08:27:28.861Z,
  },
  {
    "averageDifficulty": 2.55,
    "averageRating": 4,
    "createdOn": 2023-01-06T16:56:05.573Z,
    "creator": {
      "memberSince": 2017-09-20T17:24:23.460Z,
      "userId": "9487653a-40e7-446f-b45d-3fbf3bf97644",
      "username": "Preston40",
    },
    "depth": {
      "depth": 93.3,
      "unit": "ft",
    },
    "description": "Officiis fugiat repellendus voluptatem facere doloribus autem sapiente quas. Aperiam non distinctio rem aperiam saepe quae soluta adipisci dolores.",
    "directions": "Perspiciatis praesentium inventore deserunt sed laboriosam quas officia.",
    "freeToDive": false,
    "gps": {
      "lat": -31.96,
      "lon": -7.2,
    },
    "id": "f8b954ff-709b-43bc-aade-21a6f6906cce",
    "location": "Fargo Georgia",
    "name": "inexperienced scimitar",
    "shoreAccess": true,
    "updatedOn": 2022-02-17T12:52:47.102Z,
  },
]
`;
